--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "logs": "pm2 logs"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
+    "node-notifier": "^10.0.1",
     "node-schedule": "^2.1.0",
-    "nodemailer": "^6.7.8",
-    "request": "^2.88.2"
+    "nodemailer": "^6.7.8"
   }
 }
